Fix breadcrumb alignment

--- a/client/styles/_screen.1366.styl
+++ b/client/styles/_screen.1366.styl
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 1366px)
   $column-width = 15px
   $gutter-width = 28px
-  #main > nav,
+  #main ol.breadcrumb,
   #main nav.pagination,
   footer nav,
   footer small,
